--- a/src/Rhythm/packages.config
+++ b/src/Rhythm/packages.config
@@ -4,6 +4,7 @@
   <package id="DynamoVisualProgramming.Core" version="2.12.0.5650" targetFramework="net48" />
   <package id="DynamoVisualProgramming.DynamoCoreNodes" version="2.12.0.5650" targetFramework="net48" />
   <package id="DynamoVisualProgramming.DynamoServices" version="2.12.0.5650" targetFramework="net48" />
+  <package id="DynamoVisualProgramming.Revit" version="2.12.0.5740" targetFramework="net48" />
   <package id="DynamoVisualProgramming.ZeroTouchLibrary" version="2.12.0.5650" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net47" />
   <package id="NUnit" version="2.6.3" targetFramework="net47" />
