--- a/src/RhythmUI/RhythmUI/packages.config
+++ b/src/RhythmUI/RhythmUI/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.0" targetFramework="net452" />
   <package id="DynamoVisualProgramming.Core" version="2.12.0.5650" targetFramework="net48" />
   <package id="DynamoVisualProgramming.DynamoServices" version="2.12.0.5650" targetFramework="net48" />
+  <package id="DynamoVisualProgramming.Revit" version="2.12.0.5740" targetFramework="net48" />
   <package id="DynamoVisualProgramming.WpfUILibrary" version="2.12.0.5650" targetFramework="net48" />
   <package id="DynamoVisualProgramming.ZeroTouchLibrary" version="2.12.0.5650" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net471" />
